--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,13 @@
                     <li class="active">
                         <a href="https://nditech.org/team">ABOUT NDI TECH</a>
                     </li>
+                    <li class="active">
+                        <a href="#link-to-form">SIGN UP</a>
+                    </li>
+                    <li class="active">
+                        <a href="#contact">CONTACT</a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </div>
@@ -191,8 +198,8 @@
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="Your Email Address Here">
                                 <span class="input-group-btn">
-                                <button class="btn btn-default btn-main" type="button">Subscribe</button>
-                              </span>
+                    <button class="btn btn-default btn-main" type="button">Subscribe</button>
+                  </span>
                             </div>
                         </div>
                     </div>
@@ -266,7 +273,14 @@
                             <li class="">
                                 <a href="https://nditech.org/team">ABOUT NDI TECH</a>
                             </li>
-                            <p class="copyright-text">Copyright &copy; <a href="http://www.ndi.org">National Democratic Institute</a>| All right reserved.</p>
+                            <li class="">
+                                <a href="#link-to-form">SIGN UP</a>
+                            </li>
+                            <li class="">
+                                <a href="#contact">CONTACT</a>
+                            </li>
+                        </ul>
+                        <p class="copyright-text">Copyright &copy; <a href="http://www.ndi.org">National Democratic Institute</a>| All right reserved.</p>
                     </div>
                 </div>
             </div>
